add a LinkConsumableTextView and refactor/comment example usage with ListView.OnItemClickListner

--- a/example/src/main/res/layout/list_item.xml
+++ b/example/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.klinker.android.link_builder.LinkConsumableTextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:listPreferredItemHeight"
     android:clickable="false"
